Implement new drop page

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="drop.museum" />
     <meta
       name="description"
-      content="drop.museum description"
+      content="Create an NFT Airdrop at the Museum!"
     />
-    <meta property="og:description" content="drop.museum description" />
+    <meta property="og:description" content="Create an NFT Airdrop at the Museum!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mern-drop.museum.pages.dev/" />
-    <meta property="og:image" content="https://mern-drop.museum.pages.dev/ogimage.png" />
+    <meta property="og:url" content="https://drop.museum/" />
+    <meta property="og:image" content="https://drop.museum/ogimage.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
